--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
   },
+  "homepage": "https://vbd4eva.github.io/goit-react-hw-03-image-finder",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
